//------------------------------------------------------------------------------
// {C} Copyright 2018 Pensando Systems Inc. All rights reserved
//
// protobuf specification for policies served by tpm
//------------------------------------------------------------------------------

syntax = "proto3";
package tpmprotos;

// Mandatory imports.
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/meta.proto";
import "github.com/pensando/sw/api/protos/telemetry.proto";

//================================ FwlogPolicy ==========================================================

message FwlogPolicyEvent {
    // event type create/update/delete
    api.EventType EventType = 1 [(gogoproto.jsontag) = "event-type,omitempty"];
    // fwlog policy
    FwlogPolicy Policy = 2 [(gogoproto.jsontag) = "policy,omitempty"];
}

message FwlogPolicyEventList {
    repeated FwlogPolicyEvent EventList = 1 [(gogoproto.jsontag) = "event-list,omitempty"];
}

// FwlogPolicy firewall log Policy object
message FwlogPolicy {
    api.TypeMeta        TypeMeta    = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
    api.ObjectMeta      ObjectMeta  = 2 [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,omitempty"];
    monitoring.FwlogPolicySpec     Spec        = 3 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "spec,omitempty"];
    monitoring.FwlogPolicyStatus   Status      = 4 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "status,omitempty"];
}

// FwlogPolicyApiV1 REST interface for agent
service FwlogPolicyApiV1 {
    // options for auto generating rest endpoints
    option(venice.naplesRestService) = {
        Object: "FwlogPolicy",
        Method: ["get", "list", "post", "delete", "put"],
        Pattern: "/{ObjectMeta.Tenant}/{ObjectMeta.Namespace}/{ObjectMeta.Name}"
    };

    rpc ListFwlogPolicy(api.ObjectMeta) returns (FwlogPolicyEventList) {};
    rpc WatchFwlogPolicy (api.ObjectMeta) returns (stream FwlogPolicyEvent) {};
}
